# F1tenth

./: .gitignore  CENTERLIN_README.md  README.md  setup.py
Localizaiton/: package.xml
Localizaiton/launch/: SLAM.launch.py  amcl_ekf.launch.py
Localizaiton/maps/underground/: underground_centerline.csv  underground_map.yaml
config/: sim.yaml
control/: README.md  package.xml  setup.cfg  setup.py
f1tenth/: package.xml  setup.cfg  setup.py
f1tenth/config/: full_system.yaml  vesc_no_servo.yaml
f1tenth/config/control/: pure_pursuit.yaml
f1tenth/config/localization/: global_amcl.yaml  global_pose_fusion.yaml  local_ekf.yaml  local_pose_estimator.yaml
f1tenth/config/mapping/: slam_toolbox.yaml
f1tenth/config/path_planner/: global_checkpoint.yaml  local_hybrid_astar.yaml
f1tenth/config/planning/: local_astar_v1.yaml  local_astar_v2.yaml  local_hybrid_astar.yaml  local_sampler.yaml
f1tenth/config/utils/: graph_generator.yaml
f1tenth/data/: checkpoints.csv  final_waypoints.csv  fitted_waypoints.csv  graph.npz  graph_3b984d0a.npz  graph_6477f258.npz  local_graph.npz  local_graph_heuristics.csv  local_graph_index.json  track_graph.json  track_graph.npz  trajectory.txt
f1tenth/f1tenth/control/: pure_pursuit.py
f1tenth/f1tenth/localization/: global_pose_fusion.py  local_pose_estimator.py
f1tenth/f1tenth/path_planner/: global_checkpoint.py  local_hybrid_astar.py  local_sampler.py
f1tenth/f1tenth/planning/: global_centerline.py  global_checkpoint.py  local_astar_v1.py  local_astar_v2.py  local_hybrid_astar.py
f1tenth/f1tenth/planning/tools/: checkpoint_recorder.py  local_graph.py  map_graph.py
f1tenth/f1tenth/tools/: merge_track_widths.py  optimize_racing_line.py
f1tenth/f1tenth/utils/: __init__.py  graph_generator.py  save_path.py
f1tenth/launch/: camera_launch.py  control_launch.py  f1tenth_checkpoint_system_launch.py  f1tenth_system_launch.py  full_system_launch.py  full_system_launch_v2.py  hardware_launch.py  localization_launch.py  map_server_launch.py  no_gui_full_system_launch.py  path_planner_launch.py  planning_launch.py  simulation_full_system_launch.py  simulation_full_system_launch_v2.py  slam_launch.py
f1tenth/launch/control/: control_launch.py
f1tenth/launch/localization/: ekf_launch.py  localization_launch.py
f1tenth/launch/planning/: checkpoint_recorder_launch.py  path_planner_launch.py
f1tenth/launch/tools/: slam_launch.py
f1tenth/launch/tools/mapping/: slam_toolbox_launch.py
f1tenth/launch/utils/: graph_generator_launch.py
f1tenth/launch/utils/mapping/: slam_toolbox_launch.py
f1tenth/maps/: map.pgm  map.yaml  obstacle_track.pgm  obstacle_track.yaml  tmp.yaml  track.pgm  track.yaml
f1tenth/rviz/: f1tenth.rviz
f1tenth_control/: README.md  package.xml  setup.cfg  setup.py
f1tenth_control/f1tenth_control/: pure_pursuit_controller.py
f1tenth_control/launch/: pure_pursuit_launch.py
f1tenth_gym_ros/: README.md  package.xml  setup.cfg  setup.py
f1tenth_gym_ros/config/: sim.yaml  track_sim.yaml
f1tenth_gym_ros/f1tenth_gym_ros/: gym_bridge.py
f1tenth_gym_ros/launch/: ego_racecar.xacro  gym_bridge.rviz  gym_bridge_launch.py
f1tenth_icra_race_msgs/: CMakeLists.txt
f1tenth_path_planner/: README.md  package.xml  setup.cfg  setup.py
f1tenth_path_planner/data/: checkpoints.csv
f1tenth_path_planner/f1tenth_path_planner/: global_centerline_node.py  global_checkpoint_node.py  local_avoidance_node.py
f1tenth_path_planner/launch/: checkpoint_path_planner_launch.py  checkpoint_recorder_launch.py  path_planner_launch.py
f1tenth_slam_toolbox/: CMakeLists.txt  README.md  package.xml
f1tenth_slam_toolbox/config/: f1tenth_mapper_params.yaml
f1tenth_slam_toolbox/launch/: f1tenth_slam_launch.py  scan_header_fix.py
f1tenth_system/: README.md
localizaiton/: CMakeLists.txt  package.xml
localization/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
localization/config/: amcl_config.yaml  ekf.yaml
localization/launch/: amcl_launch.py  ekf_launch.py  localization.launch.py
localization/localization/: transform_remap.py
localization/scripts/: tf_to_odom.py
mapping/: CMakeLists.txt  package.xml
mapping/config/: mapping.lua  slam_toolbox.yaml
mapping/launch/: cartographer_launch.py  mapping.launch  mapping_launch.py  slam_toolbox_lauch.py  slam_toolbox_launch.py
mapping/rviz/: map.rviz
path_planner/: README.md  package.xml  setup.cfg  setup.py
path_planner/config/: global_centerline.yaml  global_checkpoint.yaml  local_avoidance.yaml  local_dwa.yaml  local_hybrid_astar.yaml  local_sampler.yaml
path_planner/data/: checkpoints.csv  checkpoints1.csv  checkpoints2.csv  final_waypoints.csv  fitted_waypoints.csv  local_graph.npz  local_graph_heuristics.csv  local_graph_index.json  local_graph_meta.json  local_graph_test_meta.json  obstacle_checkpoints.csv  width_log.csv
path_planner/img/: placeholder_global_path.md
path_planner/launch/: centerline_avoidance_launch.py  checkpoint_avoidance_launch.py  checkpoint_recorder_launch.py  path_planner_launch.py  sampler_launch.py
path_planner/path_planner/: centerline_logger.py  controller.py  global_centerline.py  global_checkpoint.py  local_avoidance.py  local_dwa.py  local_hybrid_astar.py  local_sampler.py  opponent_detection.py  opponent_tracking.py  sampler.py  spliner.py  state_machine.py
path_planner/path_planner/data/: checkpoints.csv  final_waypoints.csv  fitted_waypoints.csv  width_log.csv
path_planner/path_planner/modules/: frenet_conversion.py  pure_pursuit.py  state_helpers.py  utils.py
path_planner/path_planner/utils/: __init__.py  checkpoint_recorder.py  local_graph.py  utils.py
path_planner/resource/: path_planner
path_planner/scripts/: centerline-logger.py  traj_file_generator.py  width_left_right_creator.py
real_system/: package.xml  setup.py
real_system/launch/: hardware_launch.py
referenc_scripts/: centerline-logger.py  controller.py  opponent_detection.py  traj_file_generator.py  width_left_right_creator.py
simulation/: package.xml  setup.cfg  setup.py
simulator/: .gitignore  README.md  package.xml  setup.cfg  (+1 more)
(+43 files in other folders)
