<?xml version="1.0"?>
<package format="3">
  <name>localizaiton</name>
  <version>0.1.0</version>
  <description>Launch and configuration files for EKF-based localization and slam_toolbox mapping.</description>

  <maintainer email="TODO@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
