<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeset="w3c-xml-schema"?>
<package format="3">
  <name>f1tenth</name>
  <version>1.0.0</version>
  <description>F1TENTH integrated system launcher</description>
  <maintainer email="user@example.com">F1TENTH Team</maintainer>
  <license>MIT</license>

  <exec_depend>f1tenth_gym_ros</exec_depend>
  <exec_depend>f1tenth_path_planner</exec_depend>
  <exec_depend>f1tenth_control</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>