<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeset="w3c-xml-schema"?>
<package format="3">
  <name>f1tenth</name>
  <version>1.0.0</version>
  <description>F1TENTH integrated autonomous racing system</description>
  <maintainer email="user@example.com">F1TENTH Team</maintainer>
  <license>MIT</license>

  <!-- Core ROS2 dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Message types -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <!-- Transform system -->
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2</exec_depend>

  <!-- Navigation2 components -->
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>

  <!-- Localization -->
  <exec_depend>robot_localization</exec_depend>

  <!-- Mapping -->
  <exec_depend>slam_toolbox</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Python dependencies -->
  <depend>python-transforms3d-pip</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
