<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>localization</name>
  <version>1.0.0</version>
  <description>F1TENTH localization using standard nav2_amcl</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>