<?xml version="1.0"?>
<package format="3">
  <name>mapping</name>
  <version>0.0.0</version>
  <description>Cartographer mapping configuration package for wheel odom, 2D lidar, and IMU.</description>

  <maintainer email="tomark@todo.todo">tomark</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
