<?xml version="1.0"?>
<package format="2">
  <name>path_planner</name>
  <version>0.0.1</version>
  <description>Path planner node that publishes local paths from global waypoints</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>numpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
